logs/gstiles.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Rtree-0.8.3.dist-info'...
Listing './lib/python3.5/site-packages/gsTiles'...
Listing './lib/python3.5/site-packages/gsTiles/npShp'...
Compiling './lib/python3.5/site-packages/gsTiles/npShp/shpReader.py'...
***   File "./lib/python3.5/site-packages/gsTiles/npShp/shpReader.py", line 289
    print 'load',(t1-t0) * 1000, ((t1-t0) * 1000) / s.n
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gsTiles/npShp/test.py'...
***   File "./lib/python3.5/site-packages/gsTiles/npShp/test.py", line 13
    print func.__name__, t1-t0, (t1-t0)*1000 / 166941.
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gsTiles/npShp/test_cent.py'...
***   File "./lib/python3.5/site-packages/gsTiles/npShp/test_cent.py", line 64
    print func.__name__, t1-t0, (t1-t0)*1000 / 166941.
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gsTiles/optTile.py'...
***   File "./lib/python3.5/site-packages/gsTiles/optTile.py", line 21
    raise TypeError,"Unknown endian: %s"%byteorder
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gsTiles/preRender.py'...
***   File "./lib/python3.5/site-packages/gsTiles/preRender.py", line 17
    raise ValueError, "offset exceeds MAX_OFFSET"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gsTiles/serveTiles.py'...
***   File "./lib/python3.5/site-packages/gsTiles/serveTiles.py", line 37
    print "Connect:", thread_index, self.gstile_path
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gsTiles/tileMaker.py'...
***   File "./lib/python3.5/site-packages/gsTiles/tileMaker.py", line 46
    print "Expected:", expected
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gsTiles-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rtree'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
